# notifier

./: .gitignore  Dockerfile  README.md  app.py  cron.py  docker-compose.yml  notify.py  notify.yml  notify_dates.py  pyproject.toml  requirements.txt  scheduler.py  vars.py
.github/workflows/: ci-docker.yml  docker-build.yml
notify/: log_setup.py  notify.py  notify_dates.py  scheduled_dates.py  scheduler.py  send_notification.py  vars.py
tests/: test_cron.py  test_notify.py  test_notify_dates.py  test_scheduled_dates.py  test_scheduler.py
